k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: careeros-api-ingress
  namespace: careeros-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api.careeros.local 
    http:
      paths:
      
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port: { number: 8080 }
            
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: user-service
            port: { number: 8080 }
            
      - path: /api/resumes
        pathType: Prefix
        backend:
          service:
            name: resume-service
            port: { number: 8080 }
